Adds support for stdin and additional context args
* Templates can now be read from stdin
* Context variables can now be set directly from script arguments

--- a/examples/foo.j2
+++ b/examples/foo.j2
@@ -1,3 +1,5 @@
+{% extends "base.j2" -%}
+{% block body -%}
 Hello,
 
 this example template attempts to render a template with two values, 'foo' and
@@ -5,4 +7,4 @@ this example template attempts to render a template with two values, 'foo' and
 
  - foo: {{ foo }}
  - bar: {{ bar }}
-
+{%- endblock -%}
